tests/ui/associated-inherent-types/hr-do-not-blame-outlives-static-ice.stderr
warning: the feature `inherent_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/hr-do-not-blame-outlives-static-ice.rs:4:12
   |
LL | #![feature(inherent_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #8995 <https://github.com/rust-lang/rust/issues/8995> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/hr-do-not-blame-outlives-static-ice.rs:9:6
   |
LL | impl<'a> Foo<fn(&())> {
   |      ^^ unconstrained lifetime parameter

error[E0308]: mismatched types
  --> $DIR/hr-do-not-blame-outlives-static-ice.rs:14:11
   |
LL | fn foo(_: for<'a> fn(Foo<fn(&'a ())>::Assoc)) {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected struct `Foo<for<'a> fn(&'a ())>`
              found struct `Foo<for<'a> fn(&'a ())>`

error: higher-ranked subtype error
  --> $DIR/hr-do-not-blame-outlives-static-ice.rs:14:1
   |
LL | fn foo(_: for<'a> fn(Foo<fn(&'a ())>::Assoc)) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors; 1 warning emitted

Some errors have detailed explanations: E0207, E0308.
For more information about an error, try `rustc --explain E0207`.
